# pmid-gene-extractor

./: .pre-commit-config.yaml  LICENSE  PMID38790019.csv  README.md  pyproject.toml
references/: omim_list_diseases_wiki_Aug2025.txt
src/pmid_extractor/: config.py  main.py
src/pmid_parser/: config.py  gene_extractor.py  helper.py  main.py  pmid_reader.py
tests/: test_helper.py  test_main.py  test_pmid_reader.py
tests/data/: PMC11127315.xml
