[project]
name = "pmid-gene-parser"
version = "0.1.0"
description = "PMID gene parser for extracting HGNC genes and disease co-mentions, and for adding extra metadata"
authors = [
    {name = "Irina Astrovskaya"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.31.0,<3.0.0)",
    "lxml (>=4.9.0,<5.0.0)",
    "click (>=8.1.0,<9.0.0)",
    "pydantic (>=2.0.0,<3.0.0)"
]

[tool.poetry]
name = "pmid-gene-parser"
version = "0.1.0"
description = "PMID gene parser for extracting HGNC genes and disease associations"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pmid_extractor", from = "src"}]

[tool.poetry.scripts]
pmid-gene-parser = "pmid_extractor.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
pre-commit = "^3.5.0"
mypy = "^1.17.1"
types-requests = "^2.32.4.20250809"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
